deploy/deploy-to-knative/usersapi-svc-rev2.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: usersapi
  namespace: my-test-ns
spec:
  template:
    spec:
      containers:
        - name: usersapi
          image: shpboris/usersapi:rev2
          ports:
            - containerPort: 8000
              protocol: TCP
  traffic:
  - latestRevision: true
    percent: 50
  - latestRevision: false
    percent: 50
    revisionName: usersapi-00001
